--- a/interview-app/src/Components/styles.css
+++ b/interview-app/src/Components/styles.css
@@ -6,8 +6,9 @@
 
 .dropbtn {
     border-radius:100%;
-    width:36px;
-    height:42px;
+    width:24px;
+    height:24px;
+    margin-top:50%;
   }
   .actiondropbtn {
     border-radius:100%;
@@ -17,7 +18,7 @@
   
   .dropdown {
     position:absolute;
-    margin-left:68%;
+    margin-left:64%;
     display: inline-block;
   }
   
@@ -28,9 +29,10 @@
   .dropdown-content {
     display: none;
     position: absolute;
-    right:-30px;
+    right:-75px;
     background-color: #f9f9f9;
     min-width: 250px;
+    margin-top:30%;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
   }
